# verification-server

./: Cargo.toml
sql/: activation_codes.sql  devices.sql
src/: bean.rs  db.rs  main.rs  ser.rs  status.rs
