[package]
name = "verification-server"
version = "0.1.0"
author = "mrack"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="=0.5.0-rc.3", features = ["json"]}
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "1.0.40"
uuid = { version = "1.3.2", features = ["v4"] }
serde_json = "1.0.96"
serde = { version = "1.0.162", features = ["derive"] }
